# MyC

./: CMakeLists.txt  README.md  tokens_test.c
.github/workflows/: cmake-multi-platform.yml
core/: memory.h  setup.h  stream.h  string.h
include/: MyC.h
include/core/: __init__.h  memory.h  string.h  tokenizer.h
include/math/: __init__.h  math.h  matrices.h
include/software/file/: __init__.h  begin.h  setup.h
math/: __init__.h  matrices.h
software/: __init__.h  tokenizer.h
software/file/: mc_fbegin.h  png.h
tests/: core_test.c
